--- a/main.css
+++ b/main.css
@@ -1,9 +1,37 @@
 body {
   margin: 0;
+  font-family: sans-serif;
+}
+
+.form-header {
+  margin-top: 0;
+  color: #fff;
+}
+
+.logo {
+ padding-top: 5%;
+}
+
+.register-form {
+  border: 1px solid #333;
+  padding: 5% 5%;
+  width: 33%;
+  background: rgba(69, 69, 69, 0.66);
+
 }
 
 .homepage {
-  background-image: url(https://www.metallica.com/on/demandware.static/-/Sites-Metallica-Library/default/dwb6d5ba9e/images/homepage/home-hero.jpg);
+  text-align: center;
+  background-image:url('https://www.metallica.com/on/demandware.static/-/Sites-Metallica-Library/default/dwb6d5ba9e/images/homepage/home-hero.jpg');
   width: 100%;
   height: 100vh;
+}
+
+.register-form input[type="submit"] {
+  background: #FF6700;
+  color: #fff;
+  border: 1px solid orange;
+  text-transform: uppercase;
+  font-weight: 600;
+
 }
